--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
         <label for="employee-name">Nome:</label>
         <input type="text" id="employee-name" placeholder="Digite seu nome">
 
-        <button class="btn" id="start-shift">Iniciar Jornada</button>
+        <button class="btn" id="start-shift">Começo do Dia</button>
         <button class="btn" id="start-break">Início Intervalo</button>
         <button class="btn" id="end-break">Retorno Intervalo</button>
-        <button class="btn" id="end-shift">Finalizar Jornada</button>
+        <button class="btn" id="end-shift">Fim do Dia</button>
 
         <h2>Relatório</h2>
         <table id="report">
